--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="investment-calculator-logo.png">
+    <img src="investment-calculator-logo.png" alt="A money bag">
     <div>
         <h1>Investment Calculator</h1>
     </div>
