--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,27 +1,46 @@
-<form >
-    <div class="input-group" (ngSumit)="onSubmit">
+<form (ngSubmit)="onSubmit()">
+    <div class="input-group" >
         <p>
-            <label for="initial investment">Initial Investment</label>
-            <input type="text" id="initial investment" name="initial investment">
+            <label for="initial-investment">Initial Investment</label>
+            <!-- ngModel requierd a name sinon erreur -->
+            <input 
+            type="number" 
+            id="initial-investment" 
+            name="initial-investment" 
+            [(ngModel)]="enteredInitialInvestment"
+        />
         </p>
         <p>
-            <label for="annual investment">Annual Investment</label>
-            <input type="text" name="annual investment" id="annual investment">
+            <label for="annual-investment">Annual Investment</label>
+            <input 
+            type="number" 
+            name="annual-investment" 
+            id="annual-investment"
+            [(ngModel)]="enteredAnnualInvestment"
+        />
         </p>
     </div>
     <div class="input-group">
         <p>
-            <label for="expected return">Expected Return</label>
-            <input type="text" name="expected return" id="expected return">
+            <label for="expected-return">Expected Return</label>
+            <input 
+            type="number" 
+            id="expected-return" 
+            name="expected-return" 
+            [(ngModel)]="enteredExpectedReturn"
+        />
         </p>
         <p>
             <label for="duration">duration</label>
-            <input type="text" name="duration" id="duration">
+            <input 
+            type="number" 
+            id="duration" 
+            name="duration" 
+            [(ngModel)]="enteredDuration"
+        />
         </p>
     </div>
     <div>
-        <button type="button">CALCULATE</button>
+        <button>CALCULATE</button>
     </div>
 </form>
-<p class="center">Please enter some values and press "Calculate"</p>
-
